New env added, image search added